--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -209,7 +209,7 @@ services:
       - 'host.docker.internal:host-gateway'
     environment:
       ETHEREUM_JSONRPC_VARIANT: "geth"
-      BLOCK_TRANSFORMER: "clique"
+      BLOCK_TRANSFORMER: "base"
       ETHEREUM_JSONRPC_HTTP_URL: "http://host.docker.internal:8545/"
       DATABASE_URL: "postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false"
       ECTO_USE_SSL: "false"
